# mmorpg

./: .dockerignore  .env.dev  .env.dev.example  .env.node2  .env.node3  .env.prod  .env.prod.example  .gitignore  BDD_BENCH_REPORT.html  Cargo.toml  Dockerfile  IMPL_REPORT.html  PROTOCOL.md  README.md  ROADMAP.md  TEST_REPORT.html  USAGE_GUIDE.html  bench.sh  bench_output.txt  build.rs  build.sh  ci.sh  clippy.toml  docker-compose.monitoring.yml  docker-compose.prod.yml  docker-compose.yml  phase1_gate_report.html  phase3_cluster_report.html  phase4_comprehensive_report.html  project_overview.html  rustfmt.toml  stability_monitor.sh  start_all.sh  test.sh
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
benches/: gate_bench.rs
bevy-client/: Cargo.toml
bevy-client/src/: codec.rs  components.rs  crypto.rs  main.rs  network.rs  resources.rs  systems.rs  ui.rs
config/: classes.json  items.json  maps.json  mobs.json  npcs.json  quests.json  shop_items.json  skills.json  talents.json
deploy/alertmanager/: alertmanager.yml  webhook_relay.js
deploy/grafana/dashboards/: gateway_dashboard.json
deploy/grafana/provisioning/dashboards/: dashboards.yml
deploy/nginx/: nginx-full.conf  nginx-local-test.conf  nginx-prod.conf  nginx-stream-slb.conf
deploy/postgres/: init.sql
deploy/prometheus/: prometheus.yml
deploy/prometheus/alerts/: gateway_alerts.yml
logic-lib/: Cargo.toml
logic-lib/src/: db.rs  lib.rs  party.rs
logic-lib/src/chat/: mod.rs
logic-lib/src/combat/: damage.rs  mod.rs
logic-lib/src/scene/: aoi.rs  mod.rs
logic-lib/tests/tdd_unit/: chat_tests.rs  combat_tests.rs  proto_tests.rs  scene_tests.rs
proto/: game.proto  gate.proto
src/: lib.rs  main.rs
src/admin/: graceful_shutdown.rs  mod.rs  monitor_api.rs  prom_export.rs
src/cluster/: cross_gate_pubsub.rs  mod.rs  node_heartbeat.rs  node_register.rs  route_index.rs
src/config/: app_config.rs  mod.rs
src/crypto/: aes_gcm.rs  crc32.rs  mod.rs
src/foundation/: error.rs  logger.rs  metric.rs  mod.rs  snowflake.rs
src/grpc_router/: conn_pool.rs  downstream.rs  mod.rs  proto.rs  upstream.rs
src/io_engine/: mod.rs  msg_priority.rs  packet_merge.rs  read_loop.rs  write_loop.rs
src/network/: handshake.rs  mod.rs  tcp_listener.rs  ws_listener.rs
src/protocol/: decoder.rs  encoder.rs  mod.rs  packet_struct.rs
src/scene/: mod.rs
src/security/: ip_blacklist.rs  mod.rs  rate_limit.rs  security_audit.rs
src/session/: heartbeat_check.rs  mod.rs  session_mgr.rs  session_struct.rs
target_test/: .rustc_info.json
target_test/debug/.fingerprint/actix-codec-ee3bd0626eaa1741/: lib-actix_codec  lib-actix_codec.json
target_test/debug/.fingerprint/actix-http-09da58cca22e314c/: lib-actix_http  lib-actix_http.json
target_test/debug/.fingerprint/actix-macros-a9eed991e56067af/: lib-actix_macros  lib-actix_macros.json
target_test/debug/.fingerprint/actix-router-9eb0776c89d9c11d/: lib-actix_router  lib-actix_router.json
target_test/debug/.fingerprint/actix-router-f39061353a792aab/: lib-actix_router  lib-actix_router.json
target_test/debug/.fingerprint/actix-rt-580bc90663c3822e/: lib-actix_rt  lib-actix_rt.json
target_test/debug/.fingerprint/actix-server-a7fb8459bc45dd53/: lib-actix_server  lib-actix_server.json
target_test/debug/.fingerprint/actix-service-fedf9a4afa9c5ca9/: lib-actix_service  lib-actix_service.json
target_test/debug/.fingerprint/actix-utils-de4a555a37399d55/: lib-actix_utils  lib-actix_utils.json
target_test/debug/.fingerprint/actix-web-3a3cfe82f84968f6/: lib-actix_web  lib-actix_web.json
target_test/debug/.fingerprint/actix-web-codegen-59061aa0d42ad424/: lib-actix_web_codegen  lib-actix_web_codegen.json
target_test/debug/.fingerprint/adler2-66e13fa00fe40000/: lib-adler2  lib-adler2.json
target_test/debug/.fingerprint/aead-e3d101daca6b5412/: lib-aead  lib-aead.json
target_test/debug/.fingerprint/aes-d73d4f5c607f7620/: lib-aes  lib-aes.json
target_test/debug/.fingerprint/aes-gcm-f1870cd74cf7fd0f/: lib-aes_gcm  lib-aes_gcm.json
target_test/debug/.fingerprint/ahash-207354c31aac8c04/: lib-ahash  lib-ahash.json
target_test/debug/.fingerprint/ahash-39faaa7857e11276/: build-script-build-script-build  build-script-build-script-build.json
target_test/debug/.fingerprint/anes-067902b6e7105bc7/: lib-anes  (+1 more)
tests/: bdd.rs
tests/bdd/steps/: chat_steps.rs  cluster_steps.rs  combat_steps.rs  connect_steps.rs  message_steps.rs  mod.rs  protocol_steps.rs  scene_steps.rs  security_steps.rs  session_steps.rs  shutdown_steps.rs
tests/bdd_feature/: chat.feature  cluster.feature  combat.feature  connect.feature  message.feature  protocol.feature  scene.feature  security.feature  session.feature  shutdown.feature
tests/tdd_concurrent/: concurrency_tests.rs
tests/tdd_exception/: exception_tests.rs
tests/tdd_fuzz/: fuzz_tests.rs
tests/tdd_unit/: admin_tests.rs  chat_tests.rs  cluster_tests.rs  combat_tests.rs  config_tests.rs  crypto_tests.rs  grpc_router_tests.rs  io_engine_tests.rs  network_tests.rs  protocol_tests.rs  scene_tests.rs  security_tests.rs  session_tests.rs
web-client/: game.html  index.html  package-lock.json  package.json  proxy.js  sdk_test.html  sdk_test_e2e.js  start.sh  test_cluster_cross_gate.js  test_cross_gate.js  test_e2e_backpack.js  test_e2e_full_coverage.js  test_e2e_monster_ai.js  test_e2e_multiplayer.js  test_e2e_party.js  test_e2e_persist.js  test_e2e_quest.js  test_game.js  test_game_e2e.js  test_proxy_debug.js  test_security.js  test_stability.js  test_stability_v2.js  test_tcp.js  test_throughput.js  throughput_80k.js  ws_proxy.js
web-client/sdk/: game_proto.json  game_sdk.js  items.js  proto_sdk.js  proto_sdk_test.html
web-client/stability_reports/: final_delivery_report.html  stability_report_1783700230480.html  stability_report_1783703222021.html  stability_report_1783719417156.html  stability_report_1783723679366.html  stability_report_1783756814745.html  throughput_report_1783705716588.html  throughput_report_1783705891797.html  throughput_report_1783706308781.html  throughput_report_1783757018037.html
(+899 files in other folders)
