[package]
name = "rust-mmo-gate"
version = "0.1.0"
edition = "2021"
description = "Rust MMO百万在线集群网关 | 支持万人团战、无限扩容、TDD+BDD全测试覆盖"
authors = ["AI Dev Team"]
license = "MIT"
publish = false

# 编译策略：极致性能、无运行时panic、生产零冗余
[profile.dev]
opt-level = 1
debug = true
panic = "abort"
incremental = true

[profile.release]
opt-level = 3
debug = false
panic = "abort"
lto = true
codegen-units = 1
overflow-checks = false

# 核心生产依赖（适配百万并发、无锁高并发）
[dependencies]
# 异步运行时（游戏网关专属高性能Tokio）
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal", "sync", "io-util", "time"] }

# 无锁并发核心（杜绝全局Mutex瓶颈）
dashmap = "6"
parking_lot = "0.12"
crossbeam-utils = "0.8"

# 加密校验体系（游戏私有协议安全）
aes-gcm = "0.10"
crc32fast = "1.4"
hex = "0.4"

# 序列化（跨网关轻量化传输）
rmp-serde = "1.3"
prost = "0.13"
tonic = "0.12"

# Redis集群（服务发现、跨网关消息、路由索引）
redis = { version = "0.27", features = ["cluster", "tokio-comp"] }

# 配置与环境
config = "0.14"
dotenv = "0.15"

# 日志与监控
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
prometheus = "0.14"

# 工具基础
anyhow = "1.0"
thiserror = "2.0"
futures-util = "0.3"
uuid = { version = "1.11", features = ["v4"] }
bytes = "=1.7.2"
base64 = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP运维监控
actix-web = "4"

# HTTP 客户端（集群测试用）
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

# gRPC 编译
[build-dependencies]
tonic-build = "0.12"
protoc-bin-vendored = "3"

# TDD+BDD 测试依赖
[dev-dependencies]
tokio-test = "0.4"
rand = "0.8"
criterion = { version = "0.5", features = ["html_reports"] }
cucumber = "0.21"

[[test]]
name = "bdd"
harness = false  # cucumber 需要自定义 harness

[[test]]
name = "tdd_concurrent"
path = "tests/tdd_concurrent/concurrency_tests.rs"

[[test]]
name = "tdd_protocol"
path = "tests/tdd_unit/protocol_tests.rs"

[[test]]
name = "tdd_exception"
path = "tests/tdd_exception/exception_tests.rs"

[[test]]
name = "tdd_fuzz"
path = "tests/tdd_fuzz/fuzz_tests.rs"

# Mock 逻辑服二进制
[[bin]]
name = "logic-server"
path = "src/bin/logic_server.rs"

# 性能压测入口配置
[[bench]]
name = "gate_bench"
harness = false
