[package]
name = "rust-mmo-gate"
version = "0.1.0"
edition = "2021"
description = "Rust MMO百万在线集群网关 | 支持万人团战、无限扩容、TDD+BDD全测试覆盖"
authors = ["AI Dev Team"]
license = "MIT"
publish = false

# 编译策略：极致性能、无运行时panic、生产零冗余
[profile.dev]
opt-level = 1
debug = true
panic = "abort"
incremental = true

[profile.release]
opt-level = 3
debug = false
panic = "abort"
lto = true
codegen-units = 1
overflow-checks = false

# 核心生产依赖（适配百万并发、无锁高并发）
[dependencies]
# 异步运行时（游戏网关专属高性能Tokio）
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal", "sync", "io-util", "time"] }

# 无锁并发核心（杜绝全局Mutex瓶颈）
dashmap = "6"
parking_lot = "0.12"
crossbeam-utils = "0.8"

# 加密校验体系（游戏私有协议安全）
aes-gcm = "0.10"
crc32fast = "1.4"
hex = "0.4"

# 序列化（跨网关轻量化传输）
rmp-serde = "1.3"
prost = "0.13"
bytes = "1.11"
tonic = "0.12"

# Redis集群（服务发现、跨网关消息、路由索引）
redis = { version = "0.27", features = ["cluster", "tokio-comp"] }

# 配置与环境
config = "0.14"
dotenv = "0.15"

# 日志与监控
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
prometheus = "0.14"

# WebSocket 原生支持
tokio-tungstenite = "0.24"

# 工具基础
anyhow = "1.0"
thiserror = "2.0"
futures-util = "0.3"
uuid = { version = "1.11", features = ["v4"] }
base64 = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP运维监控
actix-web = "4"

# HTTP 客户端（集群测试用）
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

# 登录服依赖
bcrypt = "0.16"
jsonwebtoken = "9"
rand = "0.8"

# gRPC 编译
[build-dependencies]
tonic-build = "0.12"
protoc-bin-vendored = "3"

# TDD+BDD 测试依赖
[dev-dependencies]
tokio-test = "0.4"
rand = "0.8"
criterion = { version = "0.5", features = ["html_reports"] }
cucumber = "0.21"
proptest = "1.5"

[[test]]
name = "bdd"
harness = false  # cucumber 需要自定义 harness

[[test]]
name = "tdd_concurrent"
path = "tests/tdd_concurrent/concurrency_tests.rs"

[[test]]
name = "tdd_protocol"
path = "tests/tdd_unit/protocol_tests.rs"

# scene/chat/combat 测试已迁移至 logic-lib

[[test]]
name = "tdd_config"
path = "tests/tdd_unit/config_tests.rs"

[[test]]
name = "tdd_crypto"
path = "tests/tdd_unit/crypto_tests.rs"

[[test]]
name = "tdd_network"
path = "tests/tdd_unit/network_tests.rs"

[[test]]
name = "tdd_session"
path = "tests/tdd_unit/session_tests.rs"

[[test]]
name = "tdd_io_engine"
path = "tests/tdd_unit/io_engine_tests.rs"

[[test]]
name = "tdd_grpc_router"
path = "tests/tdd_unit/grpc_router_tests.rs"

[[test]]
name = "tdd_cluster"
path = "tests/tdd_unit/cluster_tests.rs"

[[test]]
name = "tdd_security"
path = "tests/tdd_unit/security_tests.rs"

[[test]]
name = "tdd_admin"
path = "tests/tdd_unit/admin_tests.rs"

[[test]]
name = "tdd_exception"
path = "tests/tdd_exception/exception_tests.rs"

[[test]]
name = "tdd_fuzz"
path = "tests/tdd_fuzz/fuzz_tests.rs"

# Mock 逻辑服二进制（已迁移至 logic-lib）
# [[bin]] logic-server, scene-server, chat-server, combat-server 已迁移

# 登录服二进制
[[bin]]
name = "login-server"
path = "src/bin/login_server.rs"

# 登录服集成测试
[[bin]]
name = "login-test"
path = "src/bin/login_test.rs"

# 登录服端到端测试 (通过网关TCP)
[[bin]]
name = "e2e-login-test"
path = "src/bin/e2e_login_test.rs"

# 性能压测入口配置
[[bench]]
name = "gate_bench"
harness = false
